Support generational ZGC in JvmGcMetrics
Adds support for the newly released generational ZGC by including its names for GarbageCollectorMXBeans and MemoryPools in the corresponding logic used by JvmGcMetrics. Adds a new test task for running tests with generational ZGC and adds it to the CI build.

Resolves gh-4258